--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database=POSTGRESQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/contacts
 
+spring.jpa.properties.hibernate.default_schema=jpa
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+spring.datasource.username=postgres
+spring.datasource.password=123
+
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+server.tomcat.relaxed-query-chars=|,{,},[,]
