--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,10 @@ dependencies {
 	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+
+	implementation('org.springdoc:springdoc-openapi-ui:1.6.9')
+//	implementation 'org.webjars.npm:swagger-editor:3.6.27'
 }
 
 tasks.named('test') {
